=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.1.6
 - Fixed: [ 2002885 ] Place of DEAT, assumed? (fisharebest)
 - Changed: Album Page: Minor font and cell width changes to accommodate languages other than English (windmillway)
 - Fixed: Album Page: Fixed RTL alignment of dropdown menu items, Removed spurious "dots" on Dropdown menu header link (windmillway)
 - Changed: Album Page: (Windmillway)
		1)Changed Thumbnail dropdown link to be a truncated version the Title of the media (instead of View or View/Edit)
		2)Changed source view to be viewable by all.
 - Changed: Album Page: (windmillway) 
		1) Lightbox General Help Text now in line with PGV norms. (lang variable is also split for easier editing)
		2) Tidy up thumbnail area - Added drop-down menu to replace links above and below thumbnail.
		3) Made "View Notes" link a "toggle Show"/"toggle Hide" item on thumbnails and enlarged Lightbox images.
 - Fixed: [ 1677025 ] Search Results Sorttable List - Main name (fisharebest)
 - Fixed: [ 1166561 ] Undefined Indis in Indi-/Fam-List (fisharebest)
 - Fixed: [ 1998767 ] Google analytics error on Google place check (fisharebest)
 - Fixed: [ 1731593 ] Name twice in Individual and Family lists (fisharebest)
 - Fixed: [ 1985733 ] 3215 Unrecognized GEDCOM Code (fisharebest)
 - Fixed: [ 1675790 ] Individual List - Duplicates - Omissions (fisharebest)
 - Fixed: [ 1675691 ] Highlighted names with special characters - unprintable (fisharebest)
 - Fixed: [ 1984020 ] Placelist Indi Count Issue (fisharebest)
 - Fixed: [ 1952481 ] Special Unknown Names do not print OK (fisharebest)
 - Fixed: [ 1941667 ] SVN 2840 4.1.5 ... TITLE shows living people (fisharebest)
 - Fixed: [ 1849075 ] SVN2416 ... indilist sums incorrectly (fisharebest)